# drfe-r

./: .gitignore  Cargo.toml  PHASE6_COMPREHENSIVE_TEST_RESULTS.md  PHASE6_DATA_ORGANIZATION_COMPLETE.md  PHASE6_INDEX.md  README.md  analyze_scalability.py  baseline_comparison_summary.md  benchmark_results.txt  benchmark_summary.md  build.rs  build_error.txt  build_log.json  experiment_output_v2.txt  fix_routing.py  project_status_summary.md  robustness_results.md  run_optimization_tests.sh  run_property_tests.sh  run_robustness_tests.sh  scalability_experiments_summary.md  scalability_results.json  scalability_test.json  sim_tree_result.md  theory.md  topology_experiments.json
archive/: README.md
archive/build_logs/: build_ricci.txt  full_error.txt
archive/idea/: idea.md  idea1.md  idea2.md
archive/results/: baseline_comparison.csv  baseline_comparison.json  chat_scale_results.json  (+10 more)
benches/: README.md  api_throughput.rs  coordinate_updates.rs  routing_latency.rs
docs/: audit_logging.md  theory.md  wire_protocol.md
experimental_data/: README.md  baseline_summary.json  data_index.json  topology_results_all.csv
frontend/: README.md  package-lock.json  package.json  test-large-network.html  vite.config.ts
paper_data/: CURRENT_STATUS_ANALYSIS.md  EXPERIMENT_METHODOLOGY.md  README.md  REVOLUTIONARY_IMPROVEMENTS.md  scalability_fixed.json  scalability_high_ttl.json  stretch_benchmark.txt  unit_test_summary.txt
proto/: routing.proto
scripts/: analyze_baseline_comparison.py  analyze_topology_experiments.py  generate_paper_tables.py  organize_experimental_data.py  run_robustness_retest.sh  run_sim.sh  run_topology_experiments.sh  show_churn.py
specs/: routing.tla
src/: api.rs  audit.rs  baselines.rs  byzantine.rs  chaos.rs  chat.rs  coordinates.rs  greedy_embedding.rs  grpc.rs  hierarchical.rs  hyper_press.rs  hyperbolic_models.rs  landmark_embedding.rs  landmark_routing.rs  lib.rs  lockfree.rs  network.rs  network_tls.rs  rendezvous.rs  ricci.rs  routing.rs  stability.rs  sybil.rs  telemetry.rs  tls.rs  tz_routing.rs
tests/: api_integration_tests.rs  api_property_tests.rs  audit_logging_tests.rs  auth_tests.rs  chat_property_tests.rs  checkpoint_restore_tests.rs  distributed_node_checkpoint.rs  fault_tolerance_checkpoint.rs  grpc_integration_tests.rs  network_integration_tests.rs  property_tests.proptest-regressions  property_tests.rs  tls_encryption_tests.rs
(+96 files in other folders)
