[package]
name = "drfe_r"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
sha2 = "0.10"
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
bincode = "1.3"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
tonic = "0.11"
prost = "0.12"
tokio-stream = { version = "0.1", features = ["sync"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }
base64 = "0.21"
governor = "0.6"
nonzero_ext = "0.3"
dashmap = "5.5"
crossbeam = "0.8"
rayon = "1.10"
opentelemetry = "0.21"
opentelemetry_sdk = "0.21"
opentelemetry-stdout = "0.2"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
rcgen = "0.12"
pem = "3.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "simulator"
path = "src/bin/simulator.rs"

[[bin]]
name = "scalability_experiments"
path = "src/bin/scalability_experiments.rs"

[[bin]]
name = "topology_experiments"
path = "src/bin/topology_experiments.rs"

[[bin]]
name = "baseline_comparison"
path = "src/bin/baseline_comparison.rs"

[[bin]]
name = "chat_scale_test"
path = "src/bin/chat_scale_test.rs"

[[bin]]
name = "ablation_study"
path = "src/bin/ablation_study.rs"

[[bin]]
name = "export_visualization"
path = "src/bin/export_visualization.rs"

[[bin]]
name = "hierarchical_experiments"
path = "src/bin/hierarchical_experiments.rs"

[[bin]]
name = "debug_failures"
path = "src/bin/debug_failures.rs"

[[bin]]
name = "stretch_benchmark"
path = "src/bin/stretch_benchmark.rs"

[[bin]]
name = "large_topology_benchmark"
path = "src/bin/large_topology_benchmark.rs"

[[bin]]
name = "dynamic_network_experiment"
path = "src/bin/dynamic_network_experiment.rs"

[[bench]]
name = "routing_latency"
harness = false

[[bench]]
name = "coordinate_updates"
harness = false

[[bench]]
name = "api_throughput"
harness = false
